@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Nov 2007; Oliver Borm (boroli) <oli.borm@web.de>
+  openfoam-1.4.1_p20071028.ebuild:
+  Corrected some typos in the sed commands and an einfo to the ebuild.
+
   05 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
   openfoam-1.4.1_p20071028.ebuild:
   make it multilib-safe
